test/log/load/vldcb1in0_v_i64.txt
vldcb1in0_v_i64.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vldcb1in0_v_i64.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vldcb1in0_v_i64.c:20:40: warning: backslash and newline separated by space
   20 |  #define data_init(a, b, n, threshold) \
      |                                         
vldcb1in0_v_i64.c:21:35: warning: backslash and newline separated by space
   21 |      for(int i = 0; i < n; i++) { \
      |                                    
vldcb1in0_v_i64.c:22:40: warning: backslash and newline separated by space
   22 |              a[i] = random(threshold); \
      |                                         
vldcb1in0_v_i64.c:23:27: warning: backslash and newline separated by space
   23 |              b[i] = a[i]; \
      |                            
vldcb1in0_v_i64.c:29:6: warning: no previous prototype for 'vldcb1in0_v_i64_golden' [-Wmissing-prototypes]
   29 | void vldcb1in0_v_i64_golden(int64_t *base,uint32_t *imm,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vldcb1in0_v_i64.c: In function 'vldcb1in0_v_i64_golden':
vldcb1in0_v_i64.c:33:31: error: subscripted value is neither array nor pointer nor vector
   33 |                  exp_result[i][j*GROUP_DEPTH/ELE_WIDTH+k] = base[i*COMBO_STRIDE/ELE_WIDTH+ j*GROUP_STRIDE/ELE_WIDTH + k*ELE_STRIDE/ELE_WIDTH];
      |                               ^
vldcb1in0_v_i64.c:29:53: warning: unused parameter 'imm' [-Wunused-parameter]
   29 | void vldcb1in0_v_i64_golden(int64_t *base,uint32_t *imm,int64_t *exp_result) {
      |                                           ~~~~~~~~~~^~~
vldcb1in0_v_i64.c: In function 'main':
vldcb1in0_v_i64.c:60:37: warning: passing argument 2 of 'vldcb1in0_v_i64_golden' makes pointer from integer without a cast [-Wint-conversion]
   60 |     vldcb1in0_v_i64_golden(exp_base,exp_imm,exp_result);
      |                                     ^~~~~~~
      |                                     |
      |                                     uint32_t {aka long unsigned int}
vldcb1in0_v_i64.c:29:53: note: expected 'uint32_t *' {aka 'long unsigned int *'} but argument is of type 'uint32_t' {aka 'long unsigned int'}
   29 | void vldcb1in0_v_i64_golden(int64_t *base,uint32_t *imm,int64_t *exp_result) {
      |                                           ~~~~~~~~~~^~~
vldcb1in0_v_i64.c:68:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   68 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vldcb1in0_v_i64.c:68:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   68 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
vldcb1in0_v_i64.c:43:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   43 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb1in0_v_i64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vldcb1in0_v_i64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vldcb1in0_v_i64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb1in0_v_i64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed